--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+  margin-bottom:20px;
 }
 
 .content-center h1{
