--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ nav span:hover{ color:#fff; }
 
 .about-text{
   text-align:justify;
-  max-width:450px; /* ↓ ancho reducido para ambos párrafos */
-  margin-top:5;
+  max-width:450px;
+  margin-top:0;
 }
 
 .about-text + .about-text{
@@ -124,7 +124,7 @@ nav span:hover{ color:#fff; }
   max-width:260px;
   height:auto;
   display:block;
-  margin-top:6px; /* alineación con primera línea */
+  margin-top:28px; /* ← foto bajada */
 }
 
 /* ===== TYPO ===== */
