--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ p{
   max-width:620px;
   line-height:1.6;
   margin-left:0.35vw;
+  text-align:justify;
 }
 
 /* ===== REVEAL ===== */
@@ -182,8 +183,14 @@ footer{
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
     <p class="reveal">
-      Ingeniero en diseño industrial de 24 años, con base en Valencia. Formación en la
-      UPV y UJI, con FP en electricidad. Interés en impresión 3D y desarrollo web.
+      Ingeniero en diseño industrial de 24 años, con base en Valencia, actualmente en el último año de estudios.
+      Mi perfil combina una sólida formación técnica —reforzada por una FP en electricidad— con una marcada
+      sensibilidad estética y atención al detalle. Me considero una persona meticulosa y perfeccionista, con
+      una mentalidad ecléctica que disfruta del proceso de diseño desde el análisis hasta la resolución final.
+      Me interesa especialmente el diseño industrial con enfoque estructural y arquitectónico, así como la
+      aplicación de tecnologías como la impresión 3D y la fabricación digital. Entiendo el diseño como una
+      disciplina transversal, donde lo técnico y lo creativo se integran para dar respuesta a necesidades
+      reales mediante soluciones claras, funcionales y bien fundamentadas.
     </p>
   </div>
 </section>
