--- a/index.html
+++ b/index.html
@@ -132,6 +132,29 @@ p{
   text-align:justify;
 }
 
+/* ===== ABOUT ===== */
+.about{
+  display:flex;
+  align-items:flex-start;
+  gap:80px;
+}
+
+.about-text{
+  flex:1;
+}
+
+.about-photo{
+  flex-shrink:0;
+}
+
+.about-photo img{
+  width:260px;
+  height:auto;
+  border-radius:6px;
+  filter:grayscale(100%) contrast(1.05);
+  opacity:0.9;
+}
+
 /* ===== REVEAL ===== */
 .reveal{
   opacity:0;
@@ -144,6 +167,18 @@ p{
   opacity:1;
   transform:translateY(0);
   filter:blur(0);
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:900px){
+  .about{
+    flex-direction:column;
+    gap:40px;
+  }
+
+  .about-photo img{
+    width:220px;
+  }
 }
 
 /* ===== FOOTER ===== */
@@ -180,18 +215,26 @@ footer{
 
 <!-- SOBRE MI -->
 <section class="section">
-  <div class="content-left">
-    <h1 class="reveal">Sobre mí</h1>
-    <p class="reveal">
-      Ingeniero en diseño industrial de 24 años, con base en Valencia, actualmente en el último año de estudios.
-      Mi perfil combina una sólida formación técnica —reforzada por una FP en electricidad— con una marcada
-      sensibilidad estética y atención al detalle. Me considero una persona meticulosa y perfeccionista, con
-      una mentalidad ecléctica que disfruta del proceso de diseño desde el análisis hasta la resolución final.
-      Me interesa especialmente el diseño industrial con enfoque estructural y arquitectónico, así como la
-      aplicación de tecnologías como la impresión 3D y la fabricación digital. Entiendo el diseño como una
-      disciplina transversal, donde lo técnico y lo creativo se integran para dar respuesta a necesidades
-      reales mediante soluciones claras, funcionales y bien fundamentadas.
-    </p>
+  <div class="content-left about">
+
+    <div class="about-text">
+      <h1 class="reveal">Sobre mí</h1>
+      <p class="reveal">
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Mi perfil combina una sólida formación
+        técnica —reforzada por una FP en electricidad— con una marcada sensibilidad estética y atención al detalle.
+        Me considero una persona meticulosa y perfeccionista, con una mentalidad ecléctica que disfruta del proceso
+        de diseño desde el análisis hasta la resolución final. Me interesa especialmente el diseño industrial con
+        enfoque estructural y arquitectónico, así como la aplicación de tecnologías como la impresión 3D y la
+        fabricación digital. Entiendo el diseño como una disciplina transversal, donde lo técnico y lo creativo
+        se integran para dar respuesta a necesidades reales mediante soluciones claras, funcionales y bien
+        fundamentadas.
+      </p>
+    </div>
+
+    <div class="about-photo reveal">
+      <img src="foto.jpg" alt="Foto personal de Luis Blasco">
+    </div>
+
   </div>
 </section>
 
