--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ p{
   text-align:justify;
 }
 
-/* ===== ABOUT (EDITORIAL) ===== */
+/* ===== ABOUT (AJUSTE FINO) ===== */
 .about{
   display:block;
 }
 
 .about-title{
-  margin-bottom:60px;
+  margin-bottom:32px; /* ⬅ antes 60px */
 }
 
 .about-content{
@@ -185,7 +185,7 @@ p{
   }
 
   .about-title{
-    margin-bottom:40px;
+    margin-bottom:24px;
   }
 
   .about-photo img{
