--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ p{
   text-align:justify;
 }
 
-/* ===== ABOUT ===== */
+/* ===== ABOUT (AJUSTE MUY FINO) ===== */
 .about{
   display:block;
 }
 
 .about-title{
-  margin-bottom:18px;
+  margin-bottom:8px; /* ⬅ aún más arriba */
 }
 
 .about-content{
@@ -185,7 +185,7 @@ p{
   }
 
   .about-title{
-    margin-bottom:16px;
+    margin-bottom:10px;
   }
 
   .about-photo img{
@@ -232,6 +232,7 @@ footer{
     <h1 class="reveal about-title">Sobre mí</h1>
 
     <div class="about-content">
+
       <div class="about-text reveal">
         <p>
           Ingeniero en diseño industrial de 24 años, con base en Valencia. Mi perfil combina una sólida formación
@@ -248,8 +249,8 @@ footer{
       <div class="about-photo reveal">
         <img src="foto.jpg" alt="Foto personal de Luis Blasco">
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
 
