--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ nav span:hover{ color:#fff; }
 }
 
 .section.contact .content-left{
-  margin-top:-145px;
+  margin-top:-110px;
 }
 
 /* ===== CONTENT ===== */
@@ -132,13 +132,13 @@ p{
   text-align:justify;
 }
 
-/* ===== ABOUT (AJUSTE MUY FINO) ===== */
+/* ===== ABOUT ===== */
 .about{
   display:block;
 }
 
 .about-title{
-  margin-bottom:2px; /* ⬅ aún más arriba */
+  margin-bottom:2px;
 }
 
 .about-content{
