--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ nav span:hover{ color:#fff; }
   margin-top:-165px;
 }
 
+/* ⬆️ SUBIR SOLO EL TÍTULO CONTACTO */
+.section.contact h1{
+  margin-top:-24px;
+}
+
 /* ===== CONTENT ===== */
 .content-center{
   max-width:900px;
@@ -190,6 +195,10 @@ p{
 
   .about-photo img{
     width:220px;
+  }
+
+  .section.contact h1{
+    margin-top:-12px;
   }
 }
 
