--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ p{
 
 .about-photo{
   flex-shrink:0;
+  margin-top:20px; /* ⬅ foto un poco más abajo */
 }
 
 .about-photo img{
@@ -186,6 +187,10 @@ p{
 
   .about-title{
     margin-bottom:10px;
+  }
+
+  .about-photo{
+    margin-top:0;
   }
 
   .about-photo img{
