--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ p{
 .about-content{
   display:flex;
   align-items:flex-start;
-  gap:80px;
+  gap:56px; /* ⬅ separación reducida */
 }
 
 .about-text{
@@ -153,7 +153,7 @@ p{
 
 .about-photo{
   flex-shrink:0;
-  margin-top:20px; /* ⬅ foto un poco más abajo */
+  margin-top:20px;
 }
 
 .about-photo img{
