--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
-  max-width:620px;
+  max-width:620px; /* ⬅ texto NO se alarga */
   line-height:1.6;
   margin-left:0.35vw;
   text-align:justify;
@@ -144,7 +144,7 @@ p{
 .about-content{
   display:flex;
   align-items:flex-start;
-  gap:56px; /* ⬅ separación reducida */
+  gap:40px; /* ⬅ imagen más cerca del texto */
 }
 
 .about-text{
