--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
-  max-width:560px; /* ⬅ ancho de texto reducido */
+  max-width:520px; /* ⬅ ancho del texto reducido */
   line-height:1.6;
   margin-left:0.35vw;
   text-align:justify;
