--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
-  max-width:520px; /* ⬅ ancho del texto reducido */
+  max-width:500px; /* ⬅ ancho reducido */
   line-height:1.6;
   margin-left:0.35vw;
   text-align:justify;
@@ -159,7 +159,7 @@ p{
 .about-photo img{
   width:260px;
   height:auto;
-  border-radius:6px;
+  border-radius:0; /* ⬅ sin redondeo */
   filter:grayscale(100%) contrast(1.05);
   opacity:0.9;
 }
