--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
-  max-width:500px; /* ⬅ ancho reducido */
+  max-width:500px;
   line-height:1.6;
   margin-left:0.35vw;
   text-align:justify;
@@ -154,12 +154,13 @@ p{
 .about-photo{
   flex-shrink:0;
   margin-top:20px;
+  margin-left:-20px; /* ⬅ desplazamiento a la izquierda */
 }
 
 .about-photo img{
   width:260px;
   height:auto;
-  border-radius:0; /* ⬅ sin redondeo */
+  border-radius:0;
   filter:grayscale(100%) contrast(1.05);
   opacity:0.9;
 }
@@ -191,6 +192,7 @@ p{
 
   .about-photo{
     margin-top:0;
+    margin-left:0;
   }
 
   .about-photo img{
