--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ p{
   text-align:justify;
 }
 
-/* ===== ABOUT (CORRECCIÓN REAL) ===== */
+/* ===== ABOUT (LAYOUT HONESTO) ===== */
 .about{
   display:block;
 }
@@ -144,11 +144,11 @@ p{
 .about-content{
   display:flex;
   align-items:flex-start;
-  gap:24px; /* ahora sí funciona */
+  gap:32px; /* ⬅ aire controlado */
 }
 
 .about-text{
-  max-width:500px; /* ⬅ controla el layout */
+  max-width:500px;
 }
 
 .about-photo{
