--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@ p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
-  max-width:480px; /* ⬅ texto más estrecho */
+  max-width:480px;
   line-height:1.6;
   margin-left:0.35vw;
   text-align:justify;
 }
 
-/* ===== ABOUT (LAYOUT EDITORIAL) ===== */
+/* ===== ABOUT (AJUSTE FINAL) ===== */
 .about{
   display:block;
 }
@@ -153,11 +153,11 @@ p{
 
 .about-photo{
   flex-shrink:0;
-  margin-top:20px;
+  margin-top:24px; /* ⬅ ajuste definitivo */
 }
 
 .about-photo img{
-  width:300px; /* ⬅ foto más grande */
+  width:300px;
   height:auto;
   border-radius:0;
   filter:grayscale(100%) contrast(1.05);
