--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ p{
   text-align:justify;
 }
 
-/* ===== ABOUT (AJUSTE FINAL) ===== */
+/* ===== ABOUT ===== */
 .about{
   display:block;
 }
@@ -153,7 +153,7 @@ p{
 
 .about-photo{
   flex-shrink:0;
-  margin-top:24px; /* ⬅ ajuste definitivo */
+  margin-top:23px; /* ⬅ ajuste definitivo */
 }
 
 .about-photo img{
@@ -241,13 +241,12 @@ footer{
       <div class="about-text reveal">
         <p>
           Ingeniero en diseño industrial de 24 años, con base en Valencia. Mi perfil combina una sólida formación
-          técnica —reforzada por una FP en electricidad— con una marcada sensibilidad estética y atención al detalle.
-          Me considero una persona meticulosa y perfeccionista, con una mentalidad ecléctica que disfruta del proceso
-          de diseño desde el análisis hasta la resolución final. Me interesa especialmente el diseño industrial con
-          enfoque estructural y arquitectónico, así como la aplicación de tecnologías como la impresión 3D y la
-          fabricación digital. Entiendo el diseño como una disciplina transversal, donde lo técnico y lo creativo
-          se integran para dar respuesta a necesidades reales mediante soluciones claras, funcionales y bien
-          fundamentadas.
+          técnica —reforzada por una FP en electricidad— con una fuerte sensibilidad estética y atención al detalle.
+          Soy una persona meticulosa y perfeccionista, con una mentalidad curiosa y ecléctica, y disfruto especialmente
+          del proceso de diseño desde la idea inicial hasta su materialización. Me interesa el diseño industrial con
+          enfoque estructural y arquitectónico, así como el uso de tecnologías como la impresión 3D y la fabricación
+          digital para explorar, validar y mejorar soluciones. Entiendo el diseño como una herramienta para responder
+          a necesidades reales, donde lo técnico y lo creativo se integran de forma coherente y honesta.
         </p>
       </div>
 
