--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@ p{
 
 .about-photo{
   flex-shrink:0;
-  margin-top:23px; /* ⬅ ajuste definitivo */
+  margin-top:23px;
 }
 
 .about-photo img{
-  width:300px;
+  width:290px; /* ⬅ escala final */
   height:auto;
   border-radius:0;
   filter:grayscale(100%) contrast(1.05);
