--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ p{
 }
 
 .about-photo img{
-  width:290px; /* ⬅ escala final */
+  width:290px;
   height:auto;
   border-radius:0;
   filter:grayscale(100%) contrast(1.05);
@@ -241,12 +241,15 @@ footer{
       <div class="about-text reveal">
         <p>
           Ingeniero en diseño industrial de 24 años, con base en Valencia. Mi perfil combina una sólida formación
-          técnica —reforzada por una FP en electricidad— con una fuerte sensibilidad estética y atención al detalle.
-          Soy una persona meticulosa y perfeccionista, con una mentalidad curiosa y ecléctica, y disfruto especialmente
-          del proceso de diseño desde la idea inicial hasta su materialización. Me interesa el diseño industrial con
-          enfoque estructural y arquitectónico, así como el uso de tecnologías como la impresión 3D y la fabricación
-          digital para explorar, validar y mejorar soluciones. Entiendo el diseño como una herramienta para responder
-          a necesidades reales, donde lo técnico y lo creativo se integran de forma coherente y honesta.
+          técnica —reforzada por una FP en electricidad— con una fuerte sensibilidad estética y una atención constante
+          al detalle. Soy una persona meticulosa y perfeccionista, con una mentalidad curiosa y ecléctica, y disfruto
+          especialmente del proceso de diseño desde la idea inicial hasta su materialización final. Me interesa el
+          diseño industrial con enfoque estructural y arquitectónico, así como el uso de tecnologías como la impresión
+          3D y la fabricación digital para explorar, validar y optimizar soluciones a lo largo del proceso. Valoro
+          tanto el análisis técnico como la parte conceptual del diseño, entendiendo cada proyecto como una
+          oportunidad para aprender y mejorar. Concibo el diseño como una herramienta para responder a necesidades
+          reales, donde lo técnico y lo creativo se integran de forma honesta, funcional y coherente, siempre con
+          especial atención al uso, al contexto y a las personas.
         </p>
       </div>
 
